# Generated by Django 6.0.5 on 2026-05-24 20:31

from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
    ]

    operations = [
        migrations.CreateModel(
            name='Ingresso',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('idSessao', models.IntegerField(verbose_name='ID Sessão')),
                ('idAssento', models.IntegerField(verbose_name='ID Assento')),
                ('codigoPR', models.CharField(max_length=100, verbose_name='Código PR')),
                ('status', models.CharField(choices=[('criado', 'Criado'), ('validado', 'Validado'), ('cancelado', 'Cancelado')], default='criado', max_length=20, verbose_name='Status')),
                ('ingressoMeiaEntrada', models.BooleanField(default=False, verbose_name='Ingresso Meia Entrada')),
            ],
            options={
                'verbose_name': 'Ingresso',
                'verbose_name_plural': 'Ingressos',
            },
        ),
    ]
